[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/Controls_help.gd" type="Script" id=1]

[node name="Controls_help" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
script = ExtResource( 1 )

[node name="Keyboard Controls" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
follow_focus = true

[node name="kb_grid" type="GridContainer" parent="Keyboard Controls"]
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.995
anchor_bottom = 0.995

[node name="spacing" type="Label" parent="Keyboard Controls/kb_grid"]
margin_right = 253.0
margin_bottom = 14.0

[node name="next_page" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 18.0
margin_right = 253.0
margin_bottom = 32.0
text = "    Next Page - 'enter', 'space', 'down', 's'"

[node name="prev_page" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 36.0
margin_right = 253.0
margin_bottom = 50.0
text = "    Previous Page - 'up', 'w'"

[node name="center" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 54.0
margin_right = 253.0
margin_bottom = 68.0
text = "    Re-center - 'r', 'c'"

[node name="pause" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 72.0
margin_right = 253.0
margin_bottom = 86.0
text = "    Pause - 'esc''"

[node name="fullscreen" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 90.0
margin_right = 253.0
margin_bottom = 104.0
text = "    Toggle Fullscreen - 'F11'"

[node name="borderless" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 108.0
margin_right = 253.0
margin_bottom = 122.0
text = "    Toggle Borderless - 'F10'"

[node name="reload" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 126.0
margin_right = 253.0
margin_bottom = 140.0
text = "    Reload Application - 'F5'"

[node name="help" type="Label" parent="Keyboard Controls/kb_grid"]
margin_top = 144.0
margin_right = 253.0
margin_bottom = 158.0
text = "    Show Controls - 'h'"

[node name="Mouse Controls" type="ScrollContainer" parent="."]
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.995
anchor_bottom = 0.995
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
follow_focus = true

[node name="mouse_grid" type="GridContainer" parent="Mouse Controls"]
margin_right = 316.0
margin_bottom = 266.0

[node name="spacing" type="Label" parent="Mouse Controls/mouse_grid"]
margin_right = 316.0
margin_bottom = 14.0

[node name="uni" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 18.0
margin_right = 316.0
margin_bottom = 32.0
text = "       Universal Controls:"

[node name="center" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 36.0
margin_right = 316.0
margin_bottom = 50.0
text = "    Re-center - 'middle mouse button'"

[node name="pan" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 54.0
margin_right = 316.0
margin_bottom = 68.0
text = "    Pan - hold & drag"

[node name="zoom_in" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 72.0
margin_right = 316.0
margin_bottom = 86.0
text = "    Zoom In - scroll wheel 'up'"

[node name="zoom_out" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 90.0
margin_right = 316.0
margin_bottom = 104.0
text = "    Zoom Out - scroll wheel 'down'"

[node name="spacing2" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 108.0
margin_right = 316.0
margin_bottom = 122.0

[node name="LMB" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 126.0
margin_right = 316.0
margin_bottom = 140.0
text = "       'LMB' (Left Mouse Button) Control Scheme:"

[node name="LMB_next" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 144.0
margin_right = 316.0
margin_bottom = 158.0
text = "    Next Page - "

[node name="LMB_prev" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 162.0
margin_right = 316.0
margin_bottom = 176.0
text = "    Previous Page - "

[node name="LMB_pause" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 180.0
margin_right = 316.0
margin_bottom = 194.0
text = "    Pause - 'right mouse button'"

[node name="spacing3" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 198.0
margin_right = 316.0
margin_bottom = 212.0

[node name="BMB" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 216.0
margin_right = 316.0
margin_bottom = 230.0
text = "       'BMB' (Both Mouse Buttons) Control Scheme:"

[node name="BMB_next" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 234.0
margin_right = 316.0
margin_bottom = 248.0
text = "    Next Page - "

[node name="BMB_prev" type="Label" parent="Mouse Controls/mouse_grid"]
margin_top = 252.0
margin_right = 316.0
margin_bottom = 266.0
text = "    Previous Page - "

[node name="controls are very WIP" type="Node" parent="."]
